--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ npm-debug.log*
 # Jest Coverage
 coverage
 
+# Mac cache files
+.DS_Store
+
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
