--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js",
+    "start": "NODE_ENV=dev nodemon server.js",
+    "server": "NODE_ENV=production nodemon server.js",
     "serverTestDev": "NODE_ENV=test mocha ./test/ --recursive --exit",
-    "test": "mocha ./test/ --recursive --exit",
+    "test": "NODE_ENV=test mocha ./test/ --recursive --exit",
     "test:coverage": " nyc --reporter=lcov nyc npm run test"
   },
   "author": "",
@@ -25,7 +26,7 @@
     "express": "^4.16.4",
     "fluent-ffmpeg": "^2.1.2",
     "i": "^0.3.6",
-    "jsonwebtoken": "^8.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha-cli": "^1.0.1",
     "mongoose": "^5.5.4",
     "morgan": "^1.9.1",
@@ -59,7 +60,7 @@
     "lint-staged": "^7.3.0",
     "mocha": "^6.1.4",
     "moxios": "^0.4.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.14.1",
     "nodemon": "^1.18.11",
     "nyc": "^13.3.0",
     "to": "^0.2.9",
